<resources>
	<string name="back">Back</string>
	<string name="cancel">Cancel</string>
	<string name="cancel_download">Cancel Download</string>
	<string name="delete">Delete</string>
	<string name="do_not_ask_me_again">Do not ask me again</string>
	<string name="do_nothing">Continue</string>
	<string name="download_maps">Download Maps</string>
	<string name="download_x_kb">Download %qu kB</string>
	<string name="download_x_mb">Download %qu MB</string>
	<string name="download_has_failed">Download has failed. Touch to try again.</string>
	<string name="downloaded_x_y_touch_to_delete">Downloaded (%1$qu %2$s), touch to delete</string>
	<string name="downloading_x_touch_to_cancel">Downloading %qu%%, touch to cancel</string>
	<string name="downloading">Downloading…</string>
	<string name="get_it_now">Get it now</string>
	<string name="share_on_facebook_text">Thank you for using MAPS.ME! Do you like the app? Tell your friends about it! This is the best thanks you could give us.</string>
	<string name="kb">kB</string>
	<string name="kilometres">Kilometers</string>
	<string name="leave_a_review">Leave a Review</string>
	<string name="maps">Maps</string>
	<string name="downloader_maps">Maps:</string>
	<string name="marked_for_downloading">Marked for downloading, touch to cancel</string>
	<string name="mb">MB</string>
	<string name="gb">GB</string>
	<string name="miles">Miles</string>
	<string name="core_my_position">My Position</string>
	<string name="free_disk_space_for_country_x">Please free some space on your device first in order to download %s</string>
	<string name="remind_me_later">Remind me later</string>
	<string name="later">Later</string>
	<string name="never">Never</string>
	<string name="report_an_issue">Report an issue</string>
	<string name="search">Search</string>
	<string name="search_map">Search Map</string>
	<string name="touch_to_download">Touch to download</string>
	<string name="use_cellular_data">Yes</string>
	<string name="which_measurement_system">Which measurement system do you prefer?</string>
	<string name="location_is_disabled_long_text">You currently have all Location Services for this device or application disabled. Please enable them in Settings.</string>
	<string name="device_doesnot_support_location_services">Your device doesn\'t support Location Services</string>
	<string name="zoom_to_country">Show on the map</string>
	<string name="country_status_added_to_queue">^\nis added to the download queue.</string>
	<string name="country_status_downloading">Downloading\n^\n^</string>
	<string name="country_status_download">Download Map\n(^ ^)</string>
	<string name="country_status_download_without_size">Download Map</string>
	<string name="country_status_download_without_routing">Download map\nwithout routing (^ ^)</string>
	<string name="country_status_download_failed">Download has failed</string>
	<string name="try_again">Try Again</string>
	<string name="app_name">MAPS.ME</string>
	<string name="about_menu_title">About MAPS.ME</string>
	<string name="downloading_touch_to_cancel">Downloading %d%%, touch to cancel</string>
	<string name="downloaded_touch_to_delete">Downloaded (%s), touch to delete</string>
	<string name="connection_settings">Connection Settings</string>
	<string name="download_mb_or_kb">Download %s</string>
	<string name="close">Close</string>
	<string name="unsupported_phone">The app requires hardware accelerated OpenGL. Unfortunately, your device is not supported.</string>
	<string name="download">Download</string>
	<string name="external_storage_is_not_available">SD card/USB storage with downloaded maps is not available</string>
	<string name="disconnect_usb_cable">Please disconnect USB cable or insert memory card to use MAPS.ME</string>
	<string name="not_enough_free_space_on_sdcard">Please free up some space on the SD card/USB storage first in order to use the app</string>
	<string name="not_enough_memory">Not enough memory to launch app</string>
	<string name="free_space_for_country">Please free %1$s on your device first in order to download %2$s</string>
	<string name="download_resources">Before you start using the app, allow us to download the general world map to your device.\nIt will use %s of storage.</string>
	<string name="getting_position">Getting current position</string>
	<string name="download_resources_continue">Go to Map</string>
	<string name="downloading_country_can_proceed">Downloading %s. You can now\nproceed to the map.</string>
	<string name="download_country_ask">Download %s?</string>
	<string name="update_country_ask">Update %s?</string>
	<string name="download_location_map_proposal">You can download the map\nof your current location.</string>
	<string name="download_location_update_map_proposal">You can update the map\nof your current location.</string>
	<string name="download_location_map_up_to_date">The map of your current\nlocation (%s) is up-to-date.</string>
	<string name="pause">Pause</string>
	<string name="continue_download">Continue</string>
	<string name="downloaded_touch_to_update">Downloaded (%s), touch to update or delete</string>
	<string name="update_mb_or_kb">Update %s</string>
	<string name="search_update_maps">You need updated maps for search function:</string>
	<string name="advise_update_maps">Update available for the following maps:</string>
	<string name="suggest_uninstall_lite">You don\'t need MAPS.ME Lite any more, so you can uninstall it.</string>
	<string name="download_country_success">%s downloaded successfully</string>
	<string name="download_country_failed">%s download has failed</string>
	<string name="add_new_set">Add New Set</string>
	<string name="add_to_bookmarks">Add to Bookmarks</string>
	<string name="bookmark_color">Bookmark Color</string>
	<string name="bookmark_set_name">Bookmark Set Name</string>
	<string name="bookmark_sets">Bookmark Sets</string>
	<string name="bookmarks">Bookmarks</string>
	<string name="color">Color</string>
	<string name="core_my_places">My Places</string>
	<string name="name">Name</string>
	<string name="address">Address</string>
	<string name="remove_pin">Remove Pin</string>
	<string name="set">Set</string>
	<string name="bookmarks_usage_hint">You have no bookmarks yet.\nTap on any place on the map to add a bookmark.\nBookmarks from other sources can also be imported and displayed in MAPS.ME. Open KML/KMZ file with saved bookmarks from email, Dropbox or weblink.</string>
	<string name="bookmarks_usage_hint_import_only">Bookmarks from other sources can be imported and displayed in MAPS.ME. Open a KML/KMZ file with saved bookmarks from email, Dropbox or a weblink.</string>
	<string name="settings">Settings</string>
	<string name="maps_storage">Save maps to</string>
	<string name="maps_storage_summary">Select the place where maps should be downloaded to</string>
	<string name="move_maps">Move maps?</string>
	<string name="wait_several_minutes">This can take several minutes.\nPlease wait…</string>
	<string name="visible">Visible</string>
	<string name="gps_is_disabled_long_text">GPS is disabled. Please enable it in Settings.</string>
	<string name="measurement_units">Measurement units</string>
	<string name="measurement_units_summary">Choose between miles and kilometers</string>
	<string name="search_mode_all">Everywhere</string>
	<string name="search_mode_nearme">Near Me</string>
	<string name="search_mode_viewport">On the Screen</string>
	<string name="eat">Where to eat</string>
	<string name="food">Groceries</string>
	<string name="transport">Transport</string>
	<string name="fuel">Gas</string>
	<string name="parking">Parking</string>
	<string name="shopping">Shopping</string>
	<string name="hotel">Hotel</string>
	<string name="tourism">Sights</string>
	<string name="entertainment">Entertainment</string>
	<string name="atm">ATM</string>
	<string name="nightlife">Nightlife</string>
	<string name="children">Family holiday</string>
	<string name="bank">Bank</string>
	<string name="pharmacy">Pharmacy</string>
	<string name="hospital">Hospital</string>
	<string name="toilet">Toilet</string>
	<string name="post">Post</string>
	<string name="police">Police</string>
	<string name="no_search_results_found">No results found</string>
	<string name="description">Notes</string>
	<string name="share_by_email">Share by email</string>
	<string name="share_bookmarks_email_subject">MAPS.ME bookmarks were shared with you</string>
	<string name="share_bookmarks_email_body">Hello!\n\nAttached are my bookmarks from MAPS.ME offline maps. Please open them if you have MAPS.ME installed. Or, if you don\'t, download the app for your iOS or Android device by following this link: http://maps.me/get?kmz\n\nEnjoy traveling with MAPS.ME!</string>
	<string name="load_kmz_title">Loading Bookmarks</string>
	<string name="load_kmz_successful">Bookmarks loaded successfully! You can find them on the map or on the Bookmarks Manager screen.</string>
	<string name="load_kmz_failed">Bookmarks upload failed. The file may be corrupted or defective.</string>
	<string name="edit">Edit</string>
	<string name="unknown_current_position">Your location hasn\'t been determined yet</string>
	<string name="download_location_country">Download the map of your current location (%s)</string>
	<string name="download_viewport_country_to_search">Download the country you are searching on (%s)</string>
	<string name="cant_change_this_setting">Sorry, Map Storage settings are currently disabled.</string>
	<string name="downloading_is_active">Map download is in progress now.</string>
	<string name="appStore_message">Hope you enjoy using MAPS.ME! If so, please rate or review the app at the App Store. It takes less than a minute but can really help us. Thanks for your support!</string>
	<string name="no_thanks">No, thanks</string>
	<string name="bookmark_share_sms">Hey, check out my pin at MAPS.ME! %1$s or %2$s Don\'t have offline maps installed? Download here: http://maps.me/get</string>
	<string name="my_position_share_sms">Hey, check out my current location in MAPS.ME! %1$s or %2$s Don\'t have offline maps? Download here: http://maps.me/get</string>
	<string name="bookmark_share_email_subject">Hey, check out my pin in MAPS.ME!</string>
	<string name="my_position_share_email_subject">Hey, check out my current location on the MAPS.ME map!</string>
	<string name="share_my_location">Share My Location</string>
	<string name="prefs_group_map">Map</string>
	<string name="prefs_group_misc">Miscellaneous</string>
	<string name="prefs_group_route">Navigation</string>
	<string name="website">Website</string>
	<string name="help">Help</string>
	<string name="copyright">Copyright</string>
	<string name="placepage_add_place_button">Add a place to the map</string>
	<string name="rate_gp">Rate on Google Play</string>
	<string name="tell_friends">Tell a Friend</string>
	<string name="about_description">MAPS.ME is an essential offline application for travelling. MAPS.ME is based on OpenStreetMap data and allows editing it.</string>
	<string name="privacy_policy">Privacy policy</string>
	<string name="terms_of_use">Terms of use</string>
	<string name="download_guides">Download guides</string>
	<string name="why_support_item1">We will remove all ads for you</string>
	<string name="why_support_item2">You help us to improve MAPS.ME</string>
	<string name="why_support_item3">You help us improve open maps OpenStreetMap.org</string>
	<string name="booking_button_toolbar">Pick a hotel on the map</string>
	<string name="popup_booking_download_guides_title">Booked a hotel?</string>
	<string name="popup_booking_download_guides_message">Plan your route with ready-made guides from MAPS.ME</string>
	<string name="popup_mwm_download_guides_cta">Choose one</string>
	<string name="sort_bookmarks">Sort bookmarks</string>
	<string name="by_default">By default</string>
	<string name="by_type">By type</string>
	<string name="by_distance">By distance</string>
	<string name="by_date">By date</string>
</resources>