<?xml version="1.0" encoding="utf-8"?>
<preference-headers
  xmlns:android="http://schemas.android.com/apk/res/android">
  <header
    android:id="@+id/group_map"
    android:title="@string/prefs_group_map"
    android:fragment="com.mapswithme.maps.settings.MapPrefsFragment"/>

  <header
    android:id="@+id/group_route"
    android:title="@string/prefs_group_route"
    android:fragment="com.mapswithme.maps.settings.RoutePrefsFragment"/>

  <header
    android:id="@+id/group_misc"
    android:title="@string/prefs_group_misc"
    android:fragment="com.mapswithme.maps.settings.MiscPrefsFragment"/>

  <header
    android:id="@+id/help"
    android:title="@string/help"
    android:fragment="com.mapswithme.maps.settings.HelpFragment"/>

  <header
    android:id="@+id/about"
    android:title="@string/about_menu_title"
    android:fragment="com.mapswithme.maps.settings.AboutFragment"/>
</preference-headers>