<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_marginTop="@dimen/margin_half"
  android:layout_marginBottom="@dimen/margin_half"
  android:orientation="vertical">
  <TextView
    android:id="@+id/add_place"
    style="@style/MwmTheme.Menu.Content.ListItem"
    android:drawableStart="@drawable/ic_plus"
    android:text="@string/placepage_add_place_button"
    tools:background="#40FF00FF" />
  <TextView
    android:id="@+id/download_guides"
    style="@style/MwmTheme.Menu.Content.ListItem"
    android:drawableStart="@drawable/ic_menu_download_guides"
    android:drawableTint="?attr/colorAccent"
    android:text="@string/download_guides"
    android:textColor="?attr/colorAccent"
    tools:background="#403033FF"
    tools:targetApi="m" />
  <TextView
    android:id="@+id/hotel_search"
    style="@style/MwmTheme.Menu.Content.ListItem"
    android:drawableStart="@drawable/ic_menu_hotel_search"
    android:text="@string/booking_button_toolbar"
    tools:background="#200000FF" />
  <FrameLayout
    android:id="@+id/download_maps_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
      android:id="@+id/download_maps"
      style="@style/MwmTheme.Menu.Content.ListItem"
      android:drawableStart="@drawable/ic_menu_download"
      android:text="@string/download_maps"
      tools:background="#2000FF00" />
    <TextView
      android:id="@+id/counter"
      style="@style/MwmWidget.Counter"
      android:layout_gravity="end|center_vertical"
      android:layout_marginEnd="@dimen/margin_base"
      android:visibility="gone"
      tools:text="9999"
      tools:visibility="visible" />
  </FrameLayout>
  <TextView
    android:id="@+id/settings"
    style="@style/MwmTheme.Menu.Content.ListItem"
    android:drawableStart="@drawable/ic_menu_settings"
    android:text="@string/settings"
    tools:background="#20FF0000" />
  <TextView
    android:id="@+id/share"
    style="@style/MwmTheme.Menu.Content.ListItem"
    android:drawableStart="@drawable/ic_menu_share"
    android:text="@string/share_my_location"
    tools:background="#400FF000" />
</LinearLayout>
